Fix docs page overflow on small screens in Chrome

--- a/static/style.css
+++ b/static/style.css
@@ -84,6 +84,7 @@ code {
   font-size: .8em;
   padding: 1px 2px;
   vertical-align: middle;
+  overflow-wrap: break-word;
   color: #555;
   background-color: #fcfcfc;
   border: 1px solid #e0e0e0;
@@ -91,11 +92,13 @@ code {
 
 .codeblock {
   font-family: 'Source Code Pro', monospace;
+  font-size: .9em;
   padding: 0 1em;
+  overflow-wrap: break-word;
+  white-space: pre-line;
   color: #555;
   background-color: #fcfcfc;
   border: 1px solid #e0e0e0;
-  white-space: pre-line;
 }
 
 .container {
@@ -206,6 +209,12 @@ footer {
 @media screen and (min-width: 900px) {
   .docs-page {
     width: 800px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .docs-page {
+    width: 90vw;
   }
 }
 
